[package]
name = "fixed_circular_buffer"
version = "0.3.0"
authors = ["Lolirofle <lolipopple@hotmail.com>"]
description = "A queue (the abstract data structure) implemented using a fixed size circular buffer"
documentation = "http://lolirofle.github.io/fixed_circular_buffer/fixed_circular_buffer/"
homepage = "https://github.com/Lolirofle/fixed_circular_buffer"
repository = "https://github.com/Lolirofle/fixed_circular_buffer.git"
#readme = "README.md"
keywords = ["queue","fifo","circular-buffer","ring-buffer","collection"]
license = "LGPL-3.0"
